--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="details">
             <h3>Waffle Doce</h3>
             <p class="description">
-              Deliciosa massa de waffle acompanhada de creve de avelã e morango.
+              Deliciosa massa de waffle acompanhada de creme de avelã e morango.
             </p>
           </div>
 
